--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=root
 
 mybatis.mapper-locations=file:src/main/resources/mapper/*.xml
 mybatis.type-aliases-package=com.kevin.dinofly.model
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
