--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ mybatis.type-aliases-package=com.kevin.dinofly.model
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
